== New and Noteworthy ==

== 1.2 ==

=== 1.1.2 ===

* Fixed DOM Manipulations for form elements.
* Fixed jQuery.isFunction to return false on nodes.
* Fixed jQuery.className.has, escaping regex characters in className (for metadata)
* Fixed an issue in IE where an event on a cloned element is fired during a .clone() inside of an event handler.
* Fixed IE ID selectors selecting by the name attribute.
* Change: Events are now internally stored in elem.$events rather than elem.events (due to a nasty bug relating to DOM 0 expandos).
* .attr('href') is now consistent in all browsers.
* @href is now consistent in all browsers.
* Fixed the slideDown flickering bug.
* Having a \r endline in $("...") caused a never-ending loop.
* Fixed IE6 AJAX memory leak
* Fixed bug in pushStack, reporting an element at [0] in a jQuery object with length 0

=== 1.1.1 ===

* Setting the numerical value of a css property failed, for example: .css("opacity",0.5) (also occurred with zIndex, fontWeight)
* Calling $(..., jqobj) with a context of a jQuery object failed.
* Accessing a property on an element that doesn't exist caused an error, for example: $("#foobar").attr("id")
* Calling .load() without a callback caused an error.
* You couldn't cancel an event that was triggered using .trigger() or .click() (for example).
* .add()ing a single DOM element to a jQuery object was broken.
* Passing in undefined values to a $.post() caused weird errors to occur.
* Accessing child nodes within an xml document didn't work properly.
* jQuery.isFunction() was unable to reliably determine a function, in a cross-browser way.
* Triggering a .click() failed in IE.
* Triggered click handlers were executed twice in most browsers.
* A newline passed into $(...) caused Firefox to go into a never-ending loop.
* Calling $.post() without any data caused an error.
* Calling a descendant selector after a child selector caused strange results, for example: $("ul > li ul")